Diseño del logo de whatsapp y navegación del botón conviértete en speaker

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -73,6 +73,10 @@ textarea {
   bottom: 10px;
 }
 
+.whatsapp img {
+  border-radius: 100%;
+}
+
 /* footer  */
 .footer {
   background-color: #a00b0a;
